--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "overrides": {
+    "react": "npm:@preact/compat@latest",
+    "react-dom": "npm:@preact/compat@latest"
+  },
   "dependencies": {
+    "@astrojs/preact": "^3.5.0",
     "@astrojs/rss": "^4.0.7",
-    "astro": "^4.11.1"
+    "astro": "^4.11.1",
+    "preact": "^10.22.1"
   }
 }
